5.0a4 -> 5.0b1:
    - rpm.org: Eliminate copy-paste fd digest stealing, stuff into rpmio_internal.
    - rpm.org: Add doxygen grouping to rpmte methods.
    - rpm.org: Add doxygen grouping to rpmds methods.
    - rpm.org: Lose the useless rpmrc python stuff, group macro handling to rpmmacro-py.
    - rpm.org: rpmpgp doxygen tagging.
    - rpm.org: Add bunch of missing rpmts doxygen groupings.
    - rpm.org: Move file state defs to rpmfi where they logically belong.
    - rpm.org: Move file type enums to rpmfi where it logically belongs.
    - rpm.org: Move RPMFILE_* file attributes to rpmfi.h.
    - rpm.org: Move file action enums to rpmfi where they logically belong.
    - rpm.org: Move rpmprobFilterFlag enums to rpmps where they logically belong
    - rpm.org: Move rpmtransFlags enums to rpmts.h where it logically belongs.
    - jbj: hijack rse's versioning name space, add to *.rpm packages too.
    - jbj: fix: rpmbuild -ba dir/foo.spec was broken.
    - jbj: arbitrary tags w RPM_STRING_ARRAY_TYPE default type, append assumed.
    - jbj: eliminate tagName "(unknown)" failure, return "Tag_0x12345678"
    - jbj: re-enable binary, not linear, tag lookups.
    - jbj: strip leading "RPMTAG_" prefix, in tagValue lookup.
    - jbj: test arbitrary bit, not tag lookup failure, for --yaml/--xml display.
    - afb: pass level on, to %{__lzma}.
    - jbj: revert binary search, todo++.
    - jbj: using tagValue instead permits queries of arbitrary tags.
    - jbj: do binary, not linear, search for tag name/type/value.
    - jbj: lazy arbitrary tag array initialization in rpmTags methods instead.
    - jbj: eliminate hard-wired static nameBuf for tag strings.

5.0a3 -> 5.0a4:
    - rse: provide RPM version in API via macros RPM_{VERSION,TIMESTAMP,VENDOR} and functions rpm_{version,timestamp,vendor}
    - jbj: pkgio: hdlist readers need RPMRC_NOTFOUND EOF indicator.
    - jbj: pkgio: drill in sufficient debugging to sort per/python I/O issues.